# quick-mlp

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile-library-server.sh  compile-library-windows.bat  setup.py  test_bindings.py
.github/workflows/: setup-py.yml
include/qmlp/: activation.h  builtin-activations.json  common.h  encoding_hashgrid.h  encoding_identity.h  encoding_line_integration.h  errors.h  fused_network.h  iencoding.h  inner_network.h  qmlp.h  tensor.h
include/qmlp/kernels/: activation_kernels.cuh  common.cuh  encoding_hashgrid.cuh  encoding_hashgrid_config.cuh  encoding_identity.cuh  encoding_kernels.cuh  encoding_line_integration.cuh  layer.cuh  loops.cuh  network.cuh  network_backward.cuh  network_forward.cuh  network_weight_update_block.cuh  pullpush.cuh  tensor.cuh
network_configs/: test1.json
pytorch-bindings/: CMakeLists.txt  bind_activation.cpp  bind_activation.h  bind_encoding.cpp  bind_encoding.h  bindings.cpp  bindings.h
pytorch-bindings/qmlp/: bindings.h
pytorch-bindings/src/: bind_activation.cpp  bind_activation.h  bind_encoding.cpp  bind_encoding.h  bind_network.cpp  bind_network.h  bindings.cpp  tensorlist_node.cpp  tensorlist_node.h
pytorch-tests/: import_library.py  main.py  network-2d-relu.json  test.pt  test_activations.py  test_bindings.py  test_encoding.py  test_network_image.py  test_pushpull.py
pytorch-tests/qmlp/: activation.py  encoding.py  import_library.py  network.py  pullpush.py
pytorch-tests/qmlp_tests/: test_activations.py  test_encoding.py  test_network_base.py  test_pushpull.py
src/: activation.cpp  encoding_hashgrid.cpp  encoding_identity.cpp  encoding_line_integration.cpp  fused_network.cpp  iencoding.cpp  qmlp.cpp  tensor.cpp
src_cpp/include/qmlp/: activation.h  builtin-activations.json  common.h  encoding_hashgrid.h  encoding_identity.h  encoding_line_integration.h  fused_network.h  qmlp.h  tensor.h  tmp_memory.h  utils.h
src_cpp/include/qmlp/kernels/: common.cuh  encoding_hashgrid.cuh  encoding_hashgrid_config.cuh  encoding_identity.cuh  encoding_kernels.cuh  encoding_line_integration.cuh  encoding_line_integration_config.cuh  layer.cuh  loops.cuh  network_backward.cuh  network_forward.cuh  network_weight_update_block.cuh  tensor.cuh
src_cpp/pytorch-bindings/: CMakeLists.txt
src_cpp/pytorch-bindings/qmlp/: bindings.h
src_cpp/pytorch-bindings/src/: bind_activation.cpp  bind_activation.h  bind_encoding.cpp  bind_network.cpp  bind_network.h  bind_utils.cpp  bind_utils.h  bindings.cpp  tensorlist_node.cpp
src_cpp/src/: activation.cpp  encoding_hashgrid.cpp  encoding_identity.cpp  fused_network.cpp  iencoding.cpp  qmlp.cpp  utils.cpp
src_py/qmlp/: __init__.py  _version.py  activation.py  encoding.py  import_library.py  network.py  pullpush.py
tests/: CMakeLists.txt  catch.hpp  main.cpp  test_against_eigen.cpp  test_against_eigen.h  test_against_eigen1.cpp  test_against_eigen2.cpp  test_eval_simple.cpp  test_hashgrid.cpp
tests_cpp/: eigen_half.h  test_against_eigen.h  test_against_eigen1.cpp  test_against_eigen2.cpp  test_eval_simple.cpp
tests_cpp/Eigen/: CMakeLists.txt
tests_py/: main.py
tests_py/qmlp_tests/: profile_network.py  test_activations.py  test_encoding.py  test_network_base.py  test_network_image.py  test_pushpull.py
tests_py/resources/: network-2d-relu-grid.json  network-2d-sine.json
